2015-03-10  Kaz Kylheku  <kaz@kylheku.com>

	* sysif.c (mkdir_nothrow_exists): New static function.
	(ensure_dir): New function.
	(sysif_init): ensure_dir registered as intrinsic.

	* txr.1: ensure_dir documented.

2015-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* parser.c (open_txr_file, regex_parse, lisp_parse): Functions
	moved here from parser.l.

	* parser.l (open_txr_file, regex_parse, lisp_parse): Functions
	moved from here to parser.c.

2015-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (OBJS): Add parser.o.

	* parser.h (parser_s): Declared.
	(parse_init): Declaration removed.
	(parser_l_init): Declared.

	* parser.l (parse_init): Function renamed to parser_l_init.

	* parser.c: New file.

2015-02-25  Kaz Kylheku  <kaz@kylheku.com>

	New ignerr macro.

	* eval.c (me_ignerr): New static function.
	(eval_init): Registered ignerr macro.

	* txr.1: Documented.

	* tl.vim, txr.vim: Regenerated.

2015-02-25  Kaz Kylheku  <kaz@kylheku.com>

	Introducing persistent error state on streams.

	* lib.c (cobj_ops): New function.

	* lib.h (cobj_ops): Declared.

	* stream.c (null_ops): Initializer updated.
	(struct stdio_handle): New member, err.
	(stdio_stream_mark): Mark the err member.
	(errno_to_string): New static function.
	(stdio_maybe_read_error, stdio_maybe_error): Set persistent error
	state. Use errno_to_string_function.
	(stdio_put_string, stdio_put_char, stdio_put_byte, stdio_seek,
	stdio_get_line): Set errno to zero, so that if the underlying
	operations do not set errno on err, we don't misinterpret some pervious
	errno value as pertaining to the failed stream operation.
	(stdio_get_error, stdio_get_error_str, stdio_clear_error): New static
	functions.
	(stdio_ops, tail_ops, pipe_ops): Update initializer with new functions.
	(string_in_get_error, string_in_get_error_str): New static functions.
	(string_in_ops): Update initializer with new functions.
	(byte_in_get_error, byte_in_get_error_str): New static functions.